--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,5 @@ plugins = []
 [tool.pytest.ini_options]
 addopts = "-q"
 pythonpath = ["app"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
